<resources>
    <string name="app_name">Shop Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="category_name">Name:</string>
    <string name="category_price">Price:</string>
    <string name="category_quantity">Quantity:</string>
    <string name="hint_name">Name</string>
    <string name="hint_price">Price</string>
    <string name="hint_quantity">Quantity</string>
    <string name="action_sell">Sell</string>
    <string name="select_action">Select Action</string>
    <string name="action_gallery">Choose from Gallery</string>
    <string name="action_camera">Use Camera</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
